--- a/lb/pyproject.toml
+++ b/lb/pyproject.toml
@@ -10,11 +10,12 @@ dependencies = [
 	"xopen",
 	"transformers",
 	"torch==2.3.0",
-	"beautifulsoup4",
-	"cchardet",
+	# "beautifulsoup4",
+	# "cchardet",
 	"mmh3",
-	"fastwarc",
-	"lxml",
+	# "fastwarc",
+	# "lxml",
 	"huggingface_hub",
+	"fasttext @ git+https://github.com/facebookresearch/fastText"
 ]
 
