--- a/lb/pyproject.toml
+++ b/lb/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 	# "fastwarc",
 	# "lxml",
 	"huggingface_hub",
-	"fasttext @ git+https://github.com/facebookresearch/fastText"
+	"fasttext @ git+https://github.com/facebookresearch/fastText",
 	"nltk",
 ]
 
