add parallel tokenization

--- a/lb/pyproject.toml
+++ b/lb/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
 	"huggingface_hub",
 	"fasttext @ git+https://github.com/facebookresearch/fastText",
 	"nltk",
+	"tiktoken",
 ]
 
